# osh-2023-labs

./: README.md
lab0/: linux.md  markdown.md
lab0/src/: OGAS.jfif
lab1/: .config  README.md  bzImage
lab1/syscall/: bzImage  initrd.c
lab2/: .gitignore  Makefile  README.md  shell.cpp
lab3/: .gitignore  README.md
lab3/server/: Cargo.toml
lab3/server/src/: main.rs
